bluec-tests/tests/valid/types_bool/switch_on_bool.c
int main(void) {
    _Bool b = 1;

    switch (b) {
        case 0:
            return 1;
        case 1:
            return 0;
    }
}