bluec-tests/tests/invalid/types_short/invalid_cast2.c
int main(void) {
    /* Invalid cast */
    return (short short) 0;
}